fix(button): correct vertical align for icons within buttons
Since we centralized the vertical-align setting for icons , now icons within buttons also get the wrong vertical align. This PR sets a valid value for them

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -615,15 +615,17 @@
 .ui.button > .icon:not(.button) {
   height: @iconHeight;
   opacity: @iconOpacity;
-  margin: @iconMargin;
   transition: @iconTransition;
-  vertical-align: @iconVerticalAlign;
   color: @iconColor;
 }
 
 .ui.button:not(.icon) > .icon:not(.button):not(.dropdown),
 .ui.button:not(.icon) > .icons:not(.button):not(.dropdown) {
   margin: @iconMargin;
+  vertical-align: @iconVerticalAlign;
+}
+.ui.button:not(.icon) > .icons:not(.button):not(.dropdown) > .icon {
+  vertical-align: @iconVerticalAlign;
 }
 .ui.button:not(.icon) > .right.icon:not(.button):not(.dropdown) {
   margin: @rightIconMargin;
